<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#EFEFEF">


    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="Hello world"
        android:textColor="#333333"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:onClick="UpdateText"
        android:text="@string/update" />


    <Button
        android:id="@+id/buttonMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:onClick="DisplayMes"
        android:text="@string/mes" />


    <ImageView
        android:id="@+id/Image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_launcher_background" />



<GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:padding="6dp">


        <Button
            android:id="@+id/buttonAction1"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:onClick="FontSize"
            android:padding="8dp"
            android:text="@string/size" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:padding="8dp"
            android:text="@string/text1" />


        <Button
            android:id="@+id/buttonAction2"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:onClick="TextColor"
            android:padding="8dp"
            android:text="@string/color" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:padding="8dp"
            android:text="@string/text2" />

    </GridLayout>


</LinearLayout>